--- a/5. Intermediate CSS/CSS - My Site/css/style.css
+++ b/5. Intermediate CSS/CSS - My Site/css/style.css
@@ -5,14 +5,27 @@ body {
 }
 
 h1 {
-    margin-top: 0;
+    font-size: 5.62rem;
+    /* 16px = 100% = 1em (90px/16 = 562.5%) */
+    margin-top: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
 }
+
 h2 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
 }
+
 h3 {
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a {
+    color: #11999E;
 }
 
 .top-container {
@@ -21,19 +34,21 @@ h3 {
     padding-top: 100px;
 }
 
-.middle-container {
-    background-color: red;
-    width: 200px;
-    height: 200px;
-}
+.middle-container {}
 
 .bottom-container {
-    background-color: green;
-    width: 200px;
-    height: 200px;
+    background: #66BFBF;
+    padding: 50px;
 }
 
-.top-cloud{
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.top-cloud {
     position: absolute;
     right: 300px;
     top: 50px;
@@ -44,3 +59,29 @@ h3 {
     left: 300px;
     bottom: 300px;
 }
+
+.code-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.chilli-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+.contact-me{
+    padding: 200px;
+    line-height: 2;
+}
+
+.footer-link{
+    margin-right: 40px;
+}
+.bottom-container p{
+    color: #EAF6F6;
+}
+/* .code-skill-description{
+    clear: left;
+} */
